--- a/language/pt-br.json
+++ b/language/pt-br.json
@@ -91,6 +91,33 @@
                               "label": "Hide"
                             }
                           ]
+                        },
+                        {
+                          "label": "Show as hotspot",
+                          "description": "Allows for adding interaction areas to the background image that can be custom size."
+                        },
+                        {
+                          "label": "Show hotspot when mouse is hovering",
+                          "description": "Will allow hotspot to be visible when mouse is hovering the area."
+                        },
+                        {
+                          "label": "Set the hotspot be tabbable",
+                          "description": "Will allow hotspot to be tabbable. Can be used for accessibilty."
+                        },
+                        {
+                          "label": "Show as open content in the scene",
+                          "description": "Allows the content to be shown in an open dialog box directly in the scene."
+                        },
+                        {
+                          "label": "Values for storing the height and width for hotspot"
+                        },
+                        {
+                          "label": "Code for the interaction",
+                          "description": "If not empty, the user has to input the code in order to open this content."
+                        },
+                        {
+                          "label": "A hint for the interaction code",
+                          "description": "An optional hint for the code, can be left empty if wanted"
                         }
                       ]
                     },
@@ -183,31 +210,6 @@
             {
               "label": "Display Labels",
               "description": "If unchecked - labels will show only on mouse over"
-            },
-            {
-              "label": "Show as hotspot",
-              "description": "Show as a hidden hotspot, can used for overlaying interaction on elements in image"
-            },
-            {
-              "label": "Show hotspot when mouse is hovering"
-            },
-            {
-              "label": "Set the hotspot be tabbable"
-            },
-            {
-              "label": "Show as open content in the scene",
-              "description": "Allows the content to be shown in an open dialog box directly in the scene."
-            },
-            {
-              "label": "Values for storing the height and width for hotspot"
-            },
-            {
-              "label": "Código para a interação",
-              "description": "Se não for deixada em branco, o usuário deve inserir a senha para abrir o conteúdo."
-            },
-            {
-              "label": "Uma dica para o código de interação",
-              "description": "Uma dica opcional para o código, pode ser deixada em branco se desejado"
             }
           ]
         }
