--- a/language/sv.json
+++ b/language/sv.json
@@ -91,6 +91,47 @@
                               "label": "Dölj"
                             }
                           ]
+                        },
+                        {
+                          "label": "Show as hotspot",
+                          "description": "Allows for adding interaction areas to the background image that can be custom size."
+                        },
+                        {
+                          "label": "Show hotspot when mouse is hovering",
+                          "description": "Will allow hotspot to be visible when mouse is hovering the area."
+                        },
+                        {
+                          "label": "Set the hotspot be tabbable",
+                          "description": "Will allow hotspot to be tabbable. Can be used for accessibilty."
+                        },
+                        {
+                          "label": "Show as open content in the scene",
+                          "description": "Allows the content to be shown in an open dialog box directly in the scene."
+                        },
+                        {
+                          "label": "Values for storing the height and width for hotspot"
+                        },
+                        {
+                          "label": "Code for the interaction",
+                          "description": "If not empty, the user has to input the code in order to open this content."
+                        },
+                        {
+                          "label": "A hint for the interaction code",
+                          "description": "An optional hint for the code, can be left empty if wanted"
+                        }
+                      ]
+                    },
+                    {},
+                    {},
+                    {
+                      "label": "Button style",
+                      "description": "Decide how the icon should look.",
+                      "options": [
+                        {
+                          "label": "Text icon"
+                        },
+                        {
+                          "label": "Info icon"
                         }
                       ]
                     }
@@ -119,18 +160,6 @@
         {},
         {
           "label": "Ljudspår"
-        },
-        {
-          "label": "Button style",
-          "description": "Decide how the icon should look.",
-          "options": [
-            {
-              "label": "Text icon"
-            },
-            {
-              "label": "Info icon"
-            }
-          ]
         }
       ]
     },
@@ -181,31 +210,6 @@
             {
               "label": "Visa etiketter",
               "description": "Om ej ibockat, så kommer etiketter endast visas vid hovring"
-            },
-            {
-              "label": "Show as hotspot",
-              "description": "Show as a hidden hotspot, can used for overlaying interaction on elements in image"
-            },
-            {
-              "label": "Show hotspot when mouse is hovering"
-            },
-            {
-              "label": "Set the hotspot be tabbable"
-            },
-            {
-              "label": "Show as open content in the scene",
-              "description": "Allows the content to be shown in an open dialog box directly in the scene."
-            },
-            {
-              "label": "Values for storing the height and width for hotspot"
-            },
-            {
-              "label": "Password for the interaction",
-              "description": "If not empty, the user has to input the password in order to open this content."
-            },
-            {
-              "label": "A hint for the interaction code",
-              "description": "An optional hint for the code, can be left empty if wanted"
             }
           ]
         }
