--- a/language/.en.json
+++ b/language/.en.json
@@ -177,7 +177,7 @@
         },
         {},
         {
-          "label": "Audio Track"
+          "label": "Audio track"
         },
         {
           "label": "Playlists",
